changed so time is accurate in AdminOrderPage for new orders

--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -35,6 +35,7 @@
     <input asp-for="Order.EntryMode" type="hidden" value="CVC" required>
     <input asp-for="Order.Date" type="hidden" value="@DateTime.Now" required />
     <input asp-for="Order.DayOfWeek" type="hidden" value="@DateTime.Now.DayOfWeek.ToString()" required />
+    <input asp-for="Order.Time" type="hidden" value="@DateTime.Now.ToShortTimeString()" required>
     <input type="hidden" asp-for="Order.Amount" />
     <input asp-for="Order.Type" type="hidden" value="Online" required>
     <input asp-for="Order.Fraud" type="hidden" value="False" required>
