--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -15,7 +15,6 @@
 
     <label for="bank" style="margin-bottom: 16px; display: block;">Bank:</label>
     <select asp-for="Order.Bank" id="bank" required style="width: calc(100% - 16px); padding: 8px; margin-bottom: 16px; box-sizing: border-box;">
-        <option value=""></option>
         <option value="RBS">RBS</option>
         <option value="Lloyds">Lloyds</option>
         <option value="Barclays">Barclays</option>
@@ -151,7 +150,7 @@
         <option value="Vietnam">Vietnam</option>
     </select>
 
-    <button type="submit" class="btn btn-primary mx-auto d-block" style="width:200px; height: 50px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
+    <button type="submit" class="btn btn-primary mx-auto d-block" style="width:200px; height: 50px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
         Submit Order
     </button>
 
