--- a/Pages/Cart.cshtml
+++ b/Pages/Cart.cshtml
@@ -49,8 +49,8 @@
     </a>
     <form asp-controller="Home" asp-action="Cart" method="post" style="display: inline-block;">
         <input type="hidden" name="total" value="@Model.Cart.Total" />
-        <button type="submit" class="btn btn-primary" style="width: 150px; height: 34px; padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: #e8040c; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
-            Checkout
+        <button type="submit" class="btn btn-primary" style="width: 150px; height: 34px; padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+            <b>Checkout</b>
         </button>
     </form>
 
