--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffd404;">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                    <img class="img-fluid" src="~/img/logo2.png" alt="..." width="100px" height="100px" />
+                    <img class="img-fluid" src="~/img/yellowlogo.png" alt="..." width="100px" height="100px" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
