--- a/Views/Shared/Components/ProductCategory/Default.cshtml
+++ b/Views/Shared/Components/ProductCategory/Default.cshtml
@@ -2,7 +2,7 @@
 
 <div class="d-grid gap-2">
     <div class="dropdown">
-        <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-secondary dropdown-toggle" style="width: 100%" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
             Filter by Category
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
