--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -2,7 +2,7 @@
 @model ProductsListViewModel
 
 <div class="container mt-4">
-    <h1 class="mb-4">Products</h1>
+    <h1 class="mb-4 text-center">Products</h1>
 
     <div class="row">
         <!-- Filter and category selection on the left -->
