--- a/Views/Shared/Components/ProductColor/Default.cshtml
+++ b/Views/Shared/Components/ProductColor/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<string>
 
-<div class="d-grid gap-2">
-    <div class="dropdown">
+<div class="d-grid gap-2" style="width: 100%">
+    <div class="dropdown" style="width: 100%">
         <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" style="width: 100%">
             Filter by Color
         </button>
