--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="Products"><b>Products</b></a>
                         </li>
                         <li class="nav-item">
-                            <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="AboutUs"><b>About Us</b></a>
+                            <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="AboutUs"><b>About Me</b></a>
                         </li>
                     </ul>
 
