--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -52,8 +52,8 @@
 
 
     <footer class="border-top footer text-muted">
-        <div class="container" style="text-align: center;">
-            &copy; 2024 - Algorithnic Allies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> - <a asp-area="" asp-controller="Home" asp-action="Help">Help and Documentation</a>
+        <div class="container">
+            &copy; 2024 - Algorithnic Allies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
