--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,11 +58,10 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container" style="text-align: center;">
-            &copy; 2024 - Algorithnic Allies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> - <a asp-area="" asp-controller="Home" asp-action="Help">Help and Documentation</a>
+        <div class="container">
+            &copy; 2024 - Algorithnic Allies -   <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
