--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 @using Microsoft.AspNetCore.Identity
-@using AuthLab2.Areas.Identity
-@using AuthLab2.Areas.Identity.Pages
+@using INTEX_II_413.Areas.Identity
+@using INTEX_II_413.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
