--- a/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -21,7 +21,7 @@
             </p>
         </li>
         <li>
-            <p>Scan the QR Code or enter this key <kbd style="background-color:white">@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
+            <p>Scan the QR Code or enter this key <kbd>@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
             <div id="qrCode"></div>
             <div id="qrCodeData" data-url="@Model.AuthenticatorUri"></div>
         </li>
