--- a/Views/Home/AdminHomepage.cshtml
+++ b/Views/Home/AdminHomepage.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    Layout = "_AdminLayout";
-}
-
-<h1 style="color: black; padding: 20px; text-align: center; font-size: 48px; font-family: 'Arial Black', sans-serif;" class="text-center">Admin Homepage</h1>
+﻿<h1 style="color: black; padding: 20px; text-align: center; font-size: 48px; font-family: 'Arial Black', sans-serif;" class="text-center">Admin Homepage</h1>
 
 
 <div class="container">
