--- a/Views/Home/EditProduct.cshtml
+++ b/Views/Home/EditProduct.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    Layout = "_AdminLayout";
-}
-@model Product
+﻿@model Product
 <h1 style="text-align:center">Edit Product</h1>
 <br />
 <br />
