--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="AboutUs"><b>About Us</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="AdminHomepage"><b>Admininstration</b></a>
+                        </li>
                     </ul>
 
                     <div class="col-auto navbar-text" style="display: flex; justify-content: flex-end; align-items: center;">
