--- a/Views/Home/AdminCustomers.cshtml
+++ b/Views/Home/AdminCustomers.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    Layout = "_AdminLayout";
-}
-
-<h1>Admin Table for Customers</h1>
+﻿<h1>Admin Table for Customers</h1>
 
 <table class="table table-bordered table-striped">
 
