--- a/Views/Home/DeleteCustomer.cshtml
+++ b/Views/Home/DeleteCustomer.cshtml
@@ -1,10 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
-@model Customer
+﻿@model Customer
 
 <h2>Are you sure you want to delete @Model.FirstName @Model.LastName?</h2>
 <form method="POST">
