--- a/Views/Home/DeleteProduct.cshtml
+++ b/Views/Home/DeleteProduct.cshtml
@@ -1,13 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@{
-    Layout = "_AdminLayout";
-}
-
-@model Product
+﻿@model Product
 
 <h2>Are you sure you want to delete @Model.Name?</h2>
 <form method="POST">
