--- a/Views/Home/AdminProducts.cshtml
+++ b/Views/Home/AdminProducts.cshtml
@@ -11,6 +11,7 @@
         table-layout: fixed;
         width: 100%;
     }
+</style>
 
 <div style="text-align:right">
     <form asp-controller="Home" asp-action="AdminAddProduct" method="post">
