--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using INTEX_II_413
 @using INTEX_II_413.Models
 @using INTEX_II_413.Infrastructure
+@using INTEX_II_413.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, INTEX_II_413
