fixing small things

--- a/Views/Home/AdminProducts.cshtml
+++ b/Views/Home/AdminProducts.cshtml
@@ -27,7 +27,7 @@
             <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">ProductId</th>
             <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Name</th>
             <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Price</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold; width: 1000px;">Description</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Description</th>
             <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Category</th>
             <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Year</th>
             <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">NumParts</th>
