made about page look better

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,19 +1,19 @@
 ﻿
-<h1 style="color: black; padding: 20px; text-align: center; font-size: 48px; font-family: 'Arial Black', sans-serif;">About Us!</h1>
-<br />
-
-<div style=" text-align:center">
-    <img src="~/img/aurora_pic.png" />
+<div style="text-align:center;" class="m-5">
+    <img style="border-radius:15px" src="~/img/aurora_pic.png" />
 </div>
-<br />
-<br />
-
-<p> Aurora Brickwell, renowned throughout the Lego™ community, is not merely a collector but a master builder whose 
-    passion for bricks knows no bounds. With a distributor license from The Lego Group™ and a substantial social 
-    media following, Aurora has become a beacon in the realm of plastic bricks. Beyond the bricks, Aurora's 
-    creativity shines as she unveils her original designs, each one a testament to her boundless imagination. 
-    Her influence extends far beyond the confines of her workshop, inspiring countless enthusiasts worldwide. Yet, 
-    amidst her achievements, Aurora remains grounded, always prioritizing authenticity and connection within the 
-    community. With her unwavering dedication and infectious enthusiasm, Aurora Brickwell continues to leave an 
-    indelible mark on the world of Lego, inspiring builders of all ages to dream, create, and imagine without limits.
-</p>
+<div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary text-center">
+    <div class="col-lg-12 px-0">
+        <h1 class="display-4 fst-italic">About Aurora</h1>
+        <p class="lead my-3">
+            Aurora Brickwell, renowned throughout the Lego™ community, is not merely a collector but a master builder whose
+            passion for bricks knows no bounds. With a distributor license from The Lego Group™ and a substantial social
+            media following, Aurora has become a beacon in the realm of plastic bricks. Beyond the bricks, Aurora's
+            creativity shines as she unveils her original designs, each one a testament to her boundless imagination.
+            Her influence extends far beyond the confines of her workshop, inspiring countless enthusiasts worldwide. Yet,
+            amidst her achievements, Aurora remains grounded, always prioritizing authenticity and connection within the
+            community. With her unwavering dedication and infectious enthusiasm, Aurora Brickwell continues to leave an
+            indelible mark on the world of Lego, inspiring builders of all ages to dream, create, and imagine without limits.
+        </p>
+    </div>
+</div>
