--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -5,35 +5,33 @@
     <h1 class="mb-4 text-center">Products</h1>
 
     <div class="row">
-        <!-- Filter and category selection on the left -->
-        <div class="col-md-2 col-sm-12">
-            <vc:product-category />
-            <vc:product-color />
 
-            <!-- New dropdown for selecting page size -->
-            <div class="dropdown mt-3">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="pageSizeDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="width: 100%;">
-                    Page Size
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="pageSizeDropdown">
-                    <li>
-                        <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="5">
-                            5
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="10">
-                            10
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="20">
-                            20
-                        </a>
-                    </li>
-                </ul>
+        <div class="col-md-2 col-sm-12">
+            <div class="d-flex flex-column">
+                <vc:product-category class="mb-2 flex-grow-1" />
+                
+                <vc:product-color class="mb-2" />
+
+                <!-- New dropdown for selecting page size -->
+                <div class="dropdown">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="pageSizeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        Page Size
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="pageSizeDropdown">
+                        <li>
+                            <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="5">5</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="10">10</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="20">20</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+
 
         <!-- Products list on the right -->
         <div class="col-md-10 col-sm-12">
@@ -45,12 +43,23 @@
             </div>
 
             <!-- Pagination at the bottom of the products list -->
-            <div class="row">
-                <div page-model="@Model.PaginationInfo" page-action="Products"
-                     page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
-                     class="btn-group">
+            <div class="row justify-content-center mt-4">
+                <div class="col-auto">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            @for (int i = 1; i <= Model.PaginationInfo.TotalPages; i++)
+                            {
+                                <li class="page-item @(i == Model.PaginationInfo.CurrentPage ? "active" : "")">
+                                    <a class="page-link" href="@Url.Action("Products", "Home", new { pageNum = i, pageSize = Model.PaginationInfo.ItemsPerPage, productCategory = Model.CurrentProductCategory, productColor = Model.CurrentProductColor })">@i</a>
+                                </li>
+                            }
+                        </ul>
+                    </nav>
                 </div>
             </div>
+
+
+
         </div>
     </div>
 </div>
