--- a/Views/Shared/Components/ProductColor/Default.cshtml
+++ b/Views/Shared/Components/ProductColor/Default.cshtml
@@ -5,7 +5,7 @@
         <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" style="width: 100%">
             Filter by Color
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <ul class="dropdown-menu custom-dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li>
                 <a class="dropdown-item @(string.IsNullOrEmpty(ViewBag.SelectedProductColor) ? "active" : "")" asp-action="Product" asp-controller="Home" asp-route-productColor="" asp-route-pageNum="1">
                     All Colors
@@ -22,3 +22,9 @@
         </ul>
     </div>
 </div>
+
+<style>
+    .custom-dropdown-menu {
+        background-color: #ffffff; /* Solid white background */
+    }
+</style>
