--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -9,15 +9,14 @@
         <div class="col-md-2 col-sm-12">
             <div class="d-flex flex-column">
                 <vc:product-category class="mb-2 flex-grow-1" />
-                
                 <vc:product-color class="mb-2" />
 
                 <!-- New dropdown for selecting page size -->
-                <div class="dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="pageSizeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="dropdown flex-grow-1">
+                    <button class="btn btn-outline-secondary dropdown-toggle w-100" type="button" id="pageSizeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                         Page Size
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="pageSizeDropdown">
+                    <ul class="dropdown-menu w-100" aria-labelledby="pageSizeDropdown">
                         <li>
                             <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="5">5</a>
                         </li>
@@ -30,6 +29,7 @@
                     </ul>
                 </div>
             </div>
+
         </div>
 
 
