--- a/Pages/Cart.cshtml
+++ b/Pages/Cart.cshtml
@@ -28,7 +28,9 @@
                     <form asp-page-handler="Remove" method="post">
                         <input type="hidden" name="ProductId" value="@l.Product.ProductId" />
                         <input type="hidden" name="returnUrl" value="@Model?.ReturnUrl" />
-                        <button class="btn btn-smal btn-danger">Remove</button>
+                        <button class="btn btn-primary" style="width: 150px; height: 34px; padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                            <b>Remove</b>
+                        </button>
                     </form>
                 </td>
             </tr>
@@ -44,14 +46,17 @@
 </table>
 
 <div class="text-center">
-    <a class="btn btn-primary" href="@Model.ReturnUrl" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px; color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
-        <b>Continue Shopping</b>
-    </a>
+    <form asp-controller="Home" asp-action="Products" method="get" style="display: inline-block;">
+        <button type="submit" class="btn btn-primary" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px; color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+            <b>Continue Shopping</b>
+        </button>
+    </form>
+
     <form asp-controller="Home" asp-action="Cart" method="post" style="display: inline-block;">
         <input type="hidden" name="total" value="@Model.Cart.Total" />
         <button type="submit" class="btn btn-primary" style="width: 150px; height: 34px; padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
             <b>Checkout</b>
         </button>
     </form>
-
 </div>
+
